2008-04-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/octave-mod.el (octave-help): New function.
	* progmodes/octave-hlp.el: Delete.
	* info-look.el (octave-mode): Add operator index.

	* vc.el (vc-checkout): Typo.

2008-04-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* menu-bar.el (menu-bar-tools-menu): Reorder, place Games last.
	Add "..." in the appropriate places.

	* epa.el (epa-key-list-mode-map): Add more menu entries.
	Add "..." in the appropriate places.

	* dired.el (dired-mode-map): Add :help.

	* vc.el (vc-deduce-fileset): Add new parameter.
	(vc-dir-marked-only-files): New function.
	(vc-next-action): Don't ignore directories, look at the files
	inside them.
	(vc-dir-mode): Document how the mark/unmark commands work.

2008-04-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-error-regexp-alist-alist) <gnu>:
	Rule out trailing spaces in file and directory names as well.

	* minibuffer.el (completion--do-completion): Move point even if the
	completion makes no change.
	(completion-pcm-try-completion): Fix computation of new point.

2008-04-30  David Hansen  <david.hansen@gmx.net>

	* dired.el: Require 'cl.

2008-04-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frame-handler-1): Make overlay arrow
	hollow if not in innermost frame.

2008-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make `checkout-model' apply to filesets.
	* vc-hooks.el (vc-checkout-model): Rewrite.
	(vc-before-save, vc-after-save): Adjust callers accordingly.
	* vc.el (vc-editable-p, vc-next-action, vc-checkout, vc-update)
	(vc-transfer-file): Adjust callers accordingly.
	* vc-rcs.el (vc-rcs-checkout-model): Adjust arg.
	(vc-rcs-state, vc-rcs-state-heuristic, vc-rcs-receive-file)
	(vc-rcs-checkout, vc-rcs-fetch-master-state): Use vc-rcs-checkout-model
	instead of vc-checkout-model.
	* vc-mcvs.el (vc-mcvs-revert):
	Use vc-mcvs-checkout-model i.s.o vc-checkout-model.